--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -15,14 +15,14 @@
         android:layout_centerInParent="true">
 
         <TextView
-            android:id="@+id/welcome_text"
+            android:id="@+id/textViewWelcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome"
             android:textSize="30sp"
             android:textColor="@color/white"
             android:layout_marginTop="40dp"
-            android:gravity="center"/>
+            android:layout_centerInParent="true"/>
 
         <Button
             android:id="@+id/logout_button"
@@ -33,6 +33,8 @@
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/white"
             android:textColor="#3B81F1"/>
+
+
     </LinearLayout>
 
 
