--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -25,7 +25,7 @@
             android:layout_centerInParent="true"/>
 
         <Button
-            android:id="@+id/logout_button"
+            android:id="@+id/logout_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Logout"
@@ -34,6 +34,15 @@
             android:backgroundTint="@color/white"
             android:textColor="#3B81F1"/>
 
+        <Button
+            android:id="@+id/matricula_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Matricula"
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/white"
+            android:textColor="#3B81F1"/>
 
     </LinearLayout>
 
