--- a/app/src/main/res/layout/enrrollment.xml
+++ b/app/src/main/res/layout/enrrollment.xml
@@ -6,25 +6,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Contenido principal -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/login_background">
 
-        <!-- Encabezado -->
         <TextView
-            android:id="@+id/textViewTitle"
+            android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Admin Dashboard"
+            android:text="Enrrolment dashboard"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginTop="32dp"
-            android:layout_marginStart="68dp"
+            android:layout_marginStart="18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            />
 
         <!-- Botón para abrir el menú lateral -->
         <ImageButton
@@ -37,20 +37,8 @@
             android:padding="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="25dp"
             android:layout_marginStart="5dp"/>
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:scaleType="fitCenter"
-            android:layout_marginTop="350dp"
-            android:src="@drawable/unaa"
-            android:alpha="0.7"
-            android:layout_marginStart="90dp"
-            android:contentDescription="Background Image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -60,20 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:clickable="true"
         android:focusable="true"
-        app:menu="@menu/drawer_menu" />
-
-    <TextView
-        android:id="@+id/textViewWelcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome"
-        android:textSize="24sp"
-        android:layout_marginStart="18dp"
-        android:textColor="@color/white"
-        android:layout_marginTop="90dp"
-        app:layout_constraintTop_toBottomOf="@id/menu_button"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:clickable="true"
+        app:menu="@menu/menu_enrrollment"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
