--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -55,6 +55,17 @@
             android:padding="14dp"
             android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/register_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Si no tienes cuenta, regístrate"
+            android:textColor="#3B81F1"
+            android:textSize="16sp"
+            android:paddingTop="12dp"
+            android:clickable="true"
+            android:focusable="true" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
