--- a/app/src/main/res/layout/career.xml
+++ b/app/src/main/res/layout/career.xml
@@ -15,16 +15,14 @@
             android:id="@+id/textView_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Carrer dashboard"
+            android:text="Career Dashboard"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginTop="32dp"
-            android:layout_marginStart="18dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="70dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- Botón para abrir el menú lateral -->
         <ImageButton
@@ -35,12 +33,41 @@
             android:background="@null"
             android:contentDescription="Menu"
             android:padding="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="25dp"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:queryHint="Busca por nombre"
+            android:layout_marginTop="80dp"
+            android:layout_marginStart="22dp"
+            android:iconifiedByDefault="false"
+            android:background="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <!-- RecyclerView para mostrar las entidades en CardView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="16dp"
+            android:padding="8dp"
+            android:clipToPadding="false"
+            android:scrollbars="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/textView_menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <!-- Menú lateral -->
     <com.google.android.material.navigation.NavigationView
@@ -51,7 +78,5 @@
         android:focusable="true"
         android:clickable="true"
         app:menu="@menu/menu_carrer"/>
-
-
-
 </androidx.drawerlayout.widget.DrawerLayout>
+
