--- a/app/src/main/res/layout/career.xml
+++ b/app/src/main/res/layout/career.xml
@@ -50,6 +50,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+
         <!-- RecyclerView para mostrar las entidades en CardView -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
@@ -63,6 +64,17 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAgregarCarrera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Agregar Carrera"
+            android:layout_margin="24dp"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/ic_input_add"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
