--- a/app/src/main/res/layout/editcourse.xml
+++ b/app/src/main/res/layout/editcourse.xml
@@ -116,7 +116,7 @@
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Guardar cambios"
+        android:text="Save Changes"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"/>
